--- a/0x00-semantic_html/0-index.html
+++ b/0x00-semantic_html/0-index.html
@@ -21,6 +21,6 @@
                 </section>
             </article>
         </main>
-        <footer>@copyright semantic_html</footer>
+        <footer>&copy; @copyright </footer>
     </body>
 </html>
